# fairy-chess

./: Cargo.toml  README.md  specification.md
benches/: my_benchmark.rs
src/: deflator.rs  lib.rs  movespec.rs  parser.rs  serde.rs
src/parser/: deflator.rs  mod.rs
