[package]
name = "fairy-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
peeking_take_while = "1.0.0"
petgraph = {version = "0.6.2", default-features = false ,features= ["stable_graph"]}

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "my_benchmark"
harness = false